base/src/test/resources/failure/tyck/literal-solving.aya.txt
In file $FILE:5:17 ->

  3 |   
  4 |   def take Empty => Empty
  5 |   def test => take 0
    |                    ^^

Error: Cannot check the expression
         0
       of type
         Nat1
       against the type
         Empty

1 error(s), 0 warning(s).
What are you doing?
